Test Org - Speridian/src/objects/BA_Address__c.object
<CustomObject>
    <fields>
        <fullName>BA_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Address</relationshipLabel>
        <relationshipName>Address_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_AddressLine2__c</fullName>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_AddressLine3__c</fullName>
        <label>Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_AddressLine_1__c</fullName>
        <label>Address Line 1</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_AddressType__c</fullName>
        <label>Address Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_County__c</fullName>
        <label>County</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_State__c</fullName>
        <label>State</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Zipcode__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Zipcode</label>
        <referenceTo>BA_Zipcode_Admin__c</referenceTo>
        <relationshipLabel>Address</relationshipLabel>
        <relationshipName>Address</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>